add Italian, French, and German goodbyes

--- a/goodbye.html
+++ b/goodbye.html
@@ -3,5 +3,8 @@
 
 <ul>
   <li> English: Goodbye, friends! </li>
-  <li> Spanish:  Adios, amigos! </li>
+  <li> Spanish: Adios, amigos! </li>
+  <li> Italian: Ciao, amicos! </li>
+  <li> French: Au revior, copains! </li>
+  <li> German: auf Wiedersehen, Freunde! </li>
 </ul>
